# scikms

./: .gitignore  AGENT.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  scikms.spec
.github/rulesets/: README.md  main-branch-protection.json  release-tag-protection.json
.github/workflows/: build.yml  macos-release.yml  tests.yml  windows-release.yml
config/: config.json
scikms/: __init__.py  __main__.py  alert.py  consts.py  debug.py  plugin.py  task.py
scikms/app/: __init__.py
scikms/assets/: icon.icns
scikms/cli/: __init__.py
scikms/gui/: __init__.py  debug.py  drawers.py  helpers.py  theme.py  tips.py
scikms/gui/components/: __init__.py  overlay.py
scikms/gui/kms/: __init__.py  main_window.py  shared.py  sidebar.py
scikms/gui/kms/dialogs/: __init__.py  figure_lightbox.py  image_viewer.py  note_editor.py  pdf_viewer.py
scikms/gui/kms/pages/: __init__.py  atlas.py  export.py  import_page.py  library.py  rename.py  search.py  settings.py  stats.py
scikms/gui/widgets/: __init__.py  accordion.py  labels.py  messageline.py  meta.py  selfpaint_btn.py  statusline.py  volume_button.py
scikms/i18n/: __init__.py  manager.py
scikms/i18n/assets/en-US/: kms.ftl
scikms/i18n/assets/vi-VN/: kms.ftl
scikms/i18n/windows/: __init__.py
scikms/kms/: __init__.py  atlas.py  clinical.py  config.py  db.py  importers.py
scikms/kms/db/: __init__.py  connection.py  constants.py  schema.py
scikms/kms/repositories/: __init__.py  config.py  models.py  papers.py  search.py  stats.py
scikms/kms/services/: __init__.py  papers.py  search.py  stats.py  tags.py
scikms/serializers/: __init__.py
scikms/server/: __init__.py  protocol.py  server.py
scikms/server/dslv1/: codegen.py  lexer.py  parser.py
scikms/server/pubsub/: gateway.py
scikms/utils/: aio.py  compat.py  request.py  utils.py
tests/: conftest.py  test_config.py  test_i18n.py  test_i18n_manager.py  test_kms_clinical.py  test_kms_db.py  test_kms_gui_smoke.py  test_kms_models.py  test_kms_settings.py  test_plugin.py  test_reader.py  test_signal.py  test_task.py  test_utils.py
tests/kms/respository/: test_repository_search.py
tests/kms/services/: test_services_search.py
tests/server/: test_dslv1.py
tests/server/rpc/dslv1/: test_lexer.py  test_parser.py
tools/ui_review/: capture.py
