[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scikms"
version = "0.0.1"
description = "SciKMS — clinical knowledge manager. PyQt6 desktop app for medical research papers (Vietnamese + English)."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "scikms contributors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "PyQt6",
    "pyqt6-fluent-widgets[full]>=1.7",
    "fluent-runtime>=0.4.0",
    "langcodes>=3.5.1",
    "requests",
    "pymupdf>=1.23",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pillow>=10.0",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-qt",
    "pytest-mock",
    "pytest-cov",
    "flake8",
    "Flake8-pyproject",
    "pylint",
    "mypy",
    "yapf",
    "pyinstaller>=6.19.0",
]

[project.scripts]
scikms = "scikms.__main__:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = [
    "gui/assets/icons/*.png",
    "gui/assets/icons/*.ico",
    "gui/assets/icons/*.icns",
    "i18n/assets/*/*.ftl",
]

[tool.yapf]
column_limit = 89
based_on_style = "pep8"

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-q",
    "--cov-report=",
    "--cov=scikms",
]

[tool.flake8]
max-line-length = 89
exclude = [".venv", "build", "dist"]
